--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -19,6 +19,7 @@
     padding: 8px 0px 8px 34px;
     list-style: none;
     height: 69px;
+    box-sizing: unset;
     a{
         text-decoration: none;
         color: #f5f5f5;
@@ -30,6 +31,7 @@
         padding: 0 16px;
         border-radius: 10px 0px 0px 10px;
         transition: .5s;
+        box-sizing: unset;
         &:hover{
            background: #4389b8;
            /* color: #003E6B !important; */
